[gd_scene load_steps=17 format=3 uid="uid://5xbcn36srm1k"]

[ext_resource type="Texture2D" uid="uid://bh2skvuys546x" path="res://assets/Story/Player/mask.png" id="1_3pasc"]
[ext_resource type="Script" path="res://scenes/coin_flip/coin/player/player.gd" id="1_p3u4x"]
[ext_resource type="Texture2D" uid="uid://cev2l16pvrdg6" path="res://assets/Story/Player/normal.png" id="2_87b6c"]
[ext_resource type="Texture2D" uid="uid://bn4n50qxnlrn3" path="res://assets/Story/Player/blink.png" id="3_ys08r"]
[ext_resource type="Texture2D" uid="uid://jxpmq06opley" path="res://assets/Story/Player/squint.png" id="4_hoous"]
[ext_resource type="Texture2D" uid="uid://c4oesthbcq172" path="res://assets/Story/Player/tears-1.png" id="5_l4r6g"]
[ext_resource type="Texture2D" uid="uid://cdk760nxjy5s5" path="res://assets/Story/Player/tears-2.png" id="6_7hqmn"]
[ext_resource type="Texture2D" uid="uid://dp0fevby7bfkn" path="res://assets/Story/Player/yawn-1.png" id="6_geg67"]
[ext_resource type="Texture2D" uid="uid://bfggqhakav8ca" path="res://assets/Story/Player/yawn-2.png" id="7_3ichw"]
[ext_resource type="Texture2D" uid="uid://sptdutnvnxqb" path="res://assets/Story/Player/tears-3.png" id="7_ftd3u"]
[ext_resource type="Texture2D" uid="uid://ck2456hf6n1d6" path="res://assets/Story/Player/tears-4.png" id="8_fci6a"]
[ext_resource type="Texture2D" uid="uid://debym2xbntfhk" path="res://assets/Story/Player/judge-outfit.png" id="9_k75g2"]
[ext_resource type="Texture2D" uid="uid://nbsc5c40gl17" path="res://assets/Story/Player/mask-string.png" id="10_6fujg"]
[ext_resource type="Texture2D" uid="uid://cd8e28ut54xbm" path="res://assets/Story/Player/glasses.png" id="11_piny7"]

[sub_resource type="SpriteFrames" id="SpriteFrames_i7hd6"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": ExtResource("2_87b6c")
}, {
"duration": 1.5,
"texture": ExtResource("3_ys08r")
}, {
"duration": 4.0,
"texture": ExtResource("2_87b6c")
}, {
"duration": 3.0,
"texture": ExtResource("3_ys08r")
}],
"loop": true,
"name": &"blink",
"speed": 5.0
}, {
"frames": [{
"duration": 1.5,
"texture": ExtResource("3_ys08r")
}, {
"duration": 2.0,
"texture": ExtResource("4_hoous")
}, {
"duration": 1.5,
"texture": ExtResource("3_ys08r")
}, {
"duration": 3.0,
"texture": ExtResource("4_hoous")
}],
"loop": true,
"name": &"squint",
"speed": 5.0
}, {
"frames": [{
"duration": 1.5,
"texture": ExtResource("6_geg67")
}, {
"duration": 3.0,
"texture": ExtResource("7_3ichw")
}, {
"duration": 1.5,
"texture": ExtResource("6_geg67")
}],
"loop": false,
"name": &"yawn",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_rw02k"]
animations = [{
"frames": [{
"duration": 2.0,
"texture": ExtResource("5_l4r6g")
}, {
"duration": 2.0,
"texture": ExtResource("6_7hqmn")
}, {
"duration": 2.0,
"texture": ExtResource("7_ftd3u")
}, {
"duration": 2.0,
"texture": ExtResource("8_fci6a")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Player" type="Node2D"]
z_index = 4
script = ExtResource("1_p3u4x")

[node name="AccessoriesBack" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 76.0
offset_top = -3.0
offset_right = 255.0
offset_bottom = 269.0
mouse_filter = 2

[node name="Mask" type="TextureRect" parent="AccessoriesBack"]
visible = false
layout_mode = 0
offset_right = 179.0
offset_bottom = 272.0
mouse_filter = 2
texture = ExtResource("1_3pasc")
expand_mode = 1

[node name="PlayerAnimation" type="AnimatedSprite2D" parent="."]
position = Vector2(165.333, 132.667)
scale = Vector2(0.101862, 0.109677)
sprite_frames = SubResource("SpriteFrames_i7hd6")
animation = &"yawn"

[node name="AccessoriesFront" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 76.0
offset_top = -3.0
offset_right = 255.0
offset_bottom = 269.0
mouse_filter = 2

[node name="TearsAnimation" type="AnimatedSprite2D" parent="AccessoriesFront"]
visible = false
position = Vector2(89.6667, 136)
scale = Vector2(0.102243, 0.109409)
sprite_frames = SubResource("SpriteFrames_rw02k")

[node name="JudgeOutfit" type="TextureRect" parent="AccessoriesFront"]
visible = false
layout_mode = 0
offset_right = 179.0
offset_bottom = 272.0
mouse_filter = 2
texture = ExtResource("9_k75g2")
expand_mode = 1

[node name="MaskString" type="TextureRect" parent="AccessoriesFront"]
visible = false
layout_mode = 0
offset_right = 179.0
offset_bottom = 272.0
mouse_filter = 2
texture = ExtResource("10_6fujg")
expand_mode = 1

[node name="Glasses" type="TextureRect" parent="AccessoriesFront"]
visible = false
layout_mode = 0
offset_right = 179.0
offset_bottom = 269.0
mouse_filter = 2
texture = ExtResource("11_piny7")
expand_mode = 1
